[package]
name = "tokio-play"
version = "0.1.0"
authors = ["Tabitha Rollins <tabitha@keyneston.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.1"
chrono = ""

